| Summary: | ASTERISK-27467: pjsip_options: qualify_frequency sometimes not applied on reload | ||
| Reporter: | John Bigelow (jbigelow) | Labels: | pjsip |
| Date Opened: | 2017-12-07 18:04:01.000-0600 | Date Closed: | 2017-12-13 13:03:24.000-0600 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | |
| Versions: | Frequency of Occurrence | Constant | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Several issues here really:
1. Dynamic contacts are not being properly updated on reload. As a matter of fact any changes to the AOR that a dynamic contact is associated with are not applied. 2. When the contact frequency is set to zero after being something greater than zero the associated contact status object was not being updated. OPTIONS requests would correctly be canceled, but things like the contact's status->status would not be updated 3. A dynamic contact's status would be set to UNKNOWN for the given contact when OPTIONS were disabled after being enabled. This should be set to CREATED as that is the default state that represents contacts with a frequency of zero. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2017-12-13 13:03:24.931-0600 Change 7487 merged by Jenkins2: pjsip_options: contacts sometimes not being updated on reload [https://gerrit.asterisk.org/7487|https://gerrit.asterisk.org/7487] By: Friendly Automation (friendly-automation) 2017-12-13 13:08:40.762-0600 Change 7483 merged by George Joseph: pjsip_options: dynamic contact's fields not updated on reload [https://gerrit.asterisk.org/7483|https://gerrit.asterisk.org/7483] By: Friendly Automation (friendly-automation) 2017-12-13 13:58:47.084-0600 Change 7482 merged by Jenkins2: pjsip_options: dynamic contact's fields not updated on reload [https://gerrit.asterisk.org/7482|https://gerrit.asterisk.org/7482] By: Friendly Automation (friendly-automation) 2017-12-13 14:12:17.672-0600 Change 7484 merged by Jenkins2: pjsip_options: dynamic contact's fields not updated on reload [https://gerrit.asterisk.org/7484|https://gerrit.asterisk.org/7484] By: Friendly Automation (friendly-automation) 2017-12-13 14:23:20.632-0600 Change 7486 merged by Jenkins2: pjsip_options: contacts sometimes not being updated on reload [https://gerrit.asterisk.org/7486|https://gerrit.asterisk.org/7486] By: Friendly Automation (friendly-automation) 2017-12-13 14:28:54.844-0600 Change 7485 merged by Jenkins2: pjsip_options: dynamic contact's fields not updated on reload [https://gerrit.asterisk.org/7485|https://gerrit.asterisk.org/7485] By: Friendly Automation (friendly-automation) 2017-12-13 15:00:39.400-0600 Change 7488 merged by Jenkins2: pjsip_options: contacts sometimes not being updated on reload [https://gerrit.asterisk.org/7488|https://gerrit.asterisk.org/7488] By: Friendly Automation (friendly-automation) 2017-12-13 16:51:58.975-0600 Change 7489 merged by Kevin Harwell: pjsip_options: contacts sometimes not being updated on reload [https://gerrit.asterisk.org/7489|https://gerrit.asterisk.org/7489] By: Friendly Automation (friendly-automation) 2017-12-15 09:50:53.204-0600 Change 7481 merged by Jenkins2: pjsip_options: wrongly applied "UNKNOWN" status [https://gerrit.asterisk.org/7481|https://gerrit.asterisk.org/7481] | ||